обновил под требования
добавил все проекты, удалил возможность добавлять новости

--- a/templates/digital_tech.html
+++ b/templates/digital_tech.html
@@ -26,8 +26,8 @@
 				<div class="col-lg-9">
 					<div class="contentPage">
 						<h2 class="contentPage-caption">
-							Проект "Безопасный город"						</h2>
-						<div class="breadcrumb"><a href="/">Главная</a> » Проект "Безопасный город"</div>						<main id="main" class="site-main" role="main">
+							Проект "Цифровые технологии"						</h2>
+						<div class="breadcrumb"><a href="/">Главная</a> » Проект "Цифровые технологии"</div>						<main id="main" class="site-main" role="main">
 
 <article id="post-264" class="post-264 page type-page status-publish hentry category-max_mega_menu_5">
 	<div class="entry-content">
@@ -36,8 +36,8 @@
 <table class="table table-download">
 <tbody>
 <tr >
-<td>Концепция развития АПК "Безопасный город"</td>
-<td ><a class="btn btn-white btn-animate"  href="{{ url_for('static', filename= 'files/koncepcionBG.pdf') }}" download>Скачать</a>
+<td>Паспорт регионального проекта "Цифровые технологии"</td>
+<td ><a class="btn btn-white btn-animate"  href="{{ url_for('static', filename= 'files/digital_tech.pdf') }}" download>Скачать</a>
 
 </td>
 </tr>
