--- a/templates/KJNO.html
+++ b/templates/KJNO.html
@@ -18,8 +18,8 @@
 					<div class="menu-%d0%b4%d0%be%d0%ba%d1%83%d0%bc%d0%b5%d0%bd%d1%82%d1%8b-container">
 <li id="menu-item-570" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-570"><a href="{{url_for('KJNO')}}">Карта жителя Новгородской области</a></li>
 <li id="menu-item-876" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-876"><a href="{{url_for('APKBG')}}">АПК "Безопасный город"</a></li>
-<li id="menu-item-876" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-876"><a href="{{url_for('APKBG')}}">Цифровая забота</a></li>
-<li id="menu-item-876" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-876"><a href="{{url_for('APKBG')}}">Цифровые технологии</a></li>
+<li id="menu-item-876" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-876"><a href="/digital_zabota">Цифровая забота</a></li>
+<li id="menu-item-876" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-876"><a href="/digital_tech">Цифровые технологии</a></li>
 </ul></div>
 
 				</div>
