--- a/templates/digital_zabota.html
+++ b/templates/digital_zabota.html
@@ -18,7 +18,7 @@
 					<div class="menu-%d0%b4%d0%be%d0%ba%d1%83%d0%bc%d0%b5%d0%bd%d1%82%d1%8b-container">
 <li id="menu-item-570" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-570"><a href="{{url_for('KJNO')}}">Карта жителя Новгородской области</a></li>
 <li id="menu-item-876" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-876"><a href="{{url_for('APKBG')}}">АПК "Безопасный город"</a></li>
-</ul></div><li id="menu-item-876" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-876"><a href="/digital_zabota">Цифровая забота</a></li>
+</ul></div><li id="menu-item-876" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-876"><a href="{{url_for('APKBG')}}">Цифровая забота</a></li>
 <li id="menu-item-876" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-876"><a href="/digital_tech">Цифровые технологии</a></li>
 				</div>
 					</div>
@@ -26,8 +26,8 @@
 				<div class="col-lg-9">
 					<div class="contentPage">
 						<h2 class="contentPage-caption">
-							Проект "Безопасный город"						</h2>
-						<div class="breadcrumb"><a href="/">Главная</a> » Проект "Безопасный город"</div>						<main id="main" class="site-main" role="main">
+							Проект "Цифровая забота"						</h2>
+						<div class="breadcrumb"><a href="/">Главная</a> » Проект "Цифровая забота"</div>						<main id="main" class="site-main" role="main">
 
 <article id="post-264" class="post-264 page type-page status-publish hentry category-max_mega_menu_5">
 	<div class="entry-content">
@@ -36,8 +36,8 @@
 <table class="table table-download">
 <tbody>
 <tr >
-<td>Концепция развития АПК "Безопасный город"</td>
-<td ><a class="btn btn-white btn-animate"  href="{{ url_for('static', filename= 'files/koncepcionBG.pdf') }}" download>Скачать</a>
+<td>Паспорт приоритетного регионального проекта "Цифровая забота"</td>
+<td ><a class="btn btn-white btn-animate"  href="{{ url_for('static', filename= 'files/digital_zabota.pdf') }}" download>Скачать</a>
 
 </td>
 </tr>
