--- a/templates/base.html
+++ b/templates/base.html
@@ -120,7 +120,7 @@
                 <div class="footer-nav__head">Основное</div>
 				<div class="footer-nav__links">
                     <a style="font-size: 18px" href="/ustav" >Документы</a>
-                    <a style="font-size: 18px" href="/project" >Проекты</a>
+                    <a style="font-size: 18px" href="/KJNO" >Проекты</a>
                     <a style="font-size: 18px" href="/contacts">Контакты</a>
                     <a style="font-size: 18px" href="/medianews">Новости</a>
                     <a style="font-size: 18px" href="/about">О нас</a>
