--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,11 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
     <title>{% block title %}{% endblock %}</title>
+    <link rel="icon" src="{{ url_for('static', filename= 'image/logo.ico') }}"><!-- 32×32 -->
 </head>
 <body style = "font-family: Golos; font-size: 18px" >
     <div class="container">
     <div class="page" style=" width: 110%">
-
 
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
