--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,9 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
     <title>{% block title %}{% endblock %}</title>
-    <link rel="icon" src="{{ url_for('static', filename= 'image/logo.ico') }}"><!-- 32×32 -->
+    <link rel="icon" href="/logo.ico"><!-- 32×32 -->
 </head>
-<body style = "font-family: Golos; font-size: 18px" >
+<body style = "font-family: Golos">
     <div class="container">
     <div class="page" style=" width: 110%">
 
