--- a/static/css/main.css
+++ b/static/css/main.css
@@ -116,7 +116,13 @@ h1{
     width: 50svw;
   }
 
+  .textfornews span {
+  font-size: 28px;
+  }
 
+  body {
+    font-size: 28px;
+  }
   header {
     width: 50svw;
   }
@@ -131,7 +137,7 @@ h1{
       float: right;
   }
   .texting {
-      width: 35svw;
+      width: 30svw;
       box-shadow: 0 5px 10px 0 rgba(0,0,0,.1),0 3px 15px 0 rgba(0,0,0,.19)!important;
       border: 1px solid transparent;
       background-color: #f4f7fb;
@@ -175,7 +181,6 @@ h1{
       height: 40svh;
   }
   .corup{
-      margin-right: 30px ;
       float: right;
       height: 120px;
   }
@@ -262,7 +267,7 @@ h1{
 
 @media screen and (max-width: 2400px) {
   .grid-item{
-      width: 45svw;
+      width: 35svw;
       height: 40svh;
   }
   .textfornews span {
@@ -275,7 +280,7 @@ h1{
       width: 220px;
   }
   .texting {
-      width: 45svw;
+      width: 35svw;
       box-shadow: 0 5px 10px 0 rgba(0,0,0,.1),0 3px 15px 0 rgba(0,0,0,.19)!important;
       border: 1px solid transparent;
       background-color: #f4f7fb;
@@ -315,7 +320,7 @@ h1{
   }
 
   .textfornews{
-      width: 45svw;
+      width: 35svw;
       height: 40svh;
   }
   .corup{
@@ -325,14 +330,34 @@ h1{
   }
   .image{
       height: 100%;
-      width: 45svw;
+      width: 35svw;
   }
   .header{
       height: 120px;
   }
 }
 
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1700px) {
+
+.image{
+  width: 45svw;
+}
+
+.grid-item{
+  width: 45svw;
+}
+
+.textfornews{
+  width: 45svw;
+}
+
+.texting{
+  width: 45svw;
+}
+
+}
+
+@media screen and (max-width: 1100px) {
    .page {
       width: 95%;
    }
@@ -345,19 +370,19 @@ h1{
       padding: 3% 4%;
    }
     .grid-item{
-        width: 50svw;
+        width: 60svw;
    }
     .textfornews{
-        width: 50svw;
+        width: 60svw;
         height: 40svh;
     }
     .texting {
-        width: 50svw;
+        width: 60svw;
     }
 
     .image{
         height: 100%;
-        width: 50svw;
+        width: 60svw;
     }
     .corup {
         margin-bottom: 10px;
@@ -406,15 +431,22 @@ h1{
         margin-bottom: 20px;
     }
    .grid-item {
-       width: 60svw;
-       height: 40svh;
+       width: 70svw;
+       height: 45svh;
    }
     .textfornews{
-        width: 60svw;
-        height: 40svh;
+        width: 70svw;
+        height: 45svh;
     }
 
+    .texting {
+      width: 70svw;
+    }
 
+    .image {
+      width: 70svw;
+      height: 45svh;
+    }
 }
 
 @media screen and (max-width: 650px) {
@@ -987,13 +1019,15 @@ item-2 .desc-wrap .desc {
 @media (max-width: 450px) {
     .header-menu__main-link:nth-child(1) {
         display: none;
+        margin-left: -5px;
+        width: 55px;
     }
     .header-menu__main-link:nth-child(2){
         width: 55px;
     }
     .header-menu__main-link:nth-child(3){
         width: 55px;
-        margin-left: 5px;
+        margin-left: -25px;
     }
     .header-menu__main-link:nth-child(4) {
       width: 55px;
@@ -1080,7 +1114,7 @@ item-2 .desc-wrap .desc {
 
 @media (max-width: 600px) {
   
-  .header-menu__main-link:nth-child(1) {
+  .header-menu__main-link:nth-child(2) {
     display: none;
   }
 }
@@ -1101,6 +1135,11 @@ item-2 .desc-wrap .desc {
 .header-menu__main-link:nth-child(4):hover{
    border-bottom: 2px solid #0050B2;
 }
+
+.header-menu__main-link:nth-child(5):hover{
+  border-bottom: 2px solid #0050B2;
+}
+
 /* region*/
 
 .statistics {
