--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="icon" href="/logo.ico"><!-- 32×32 -->
 </head>
-<body style = "font-family: Golos">
+<body style = "font-family: Golos; font-size: 18px;">
     <div class="container">
     <div class="page" style=" width: 110%">
 
