--- a/templates/digital_tech.html
+++ b/templates/digital_tech.html
@@ -11,17 +11,19 @@
 	<div id="content-inside" class="container">
 		<div class="row">
 			<div class="col-lg-3">
-				<div class="left-menu ">
-					<h3 class="left-menu-caption">
-						<i class="icon"></i>
-						Документы	</h3>
-					<div class="menu-%d0%b4%d0%be%d0%ba%d1%83%d0%bc%d0%b5%d0%bd%d1%82%d1%8b-container">
-<li id="menu-item-570" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-570"><a href="{{url_for('KJNO')}}">Карта жителя Новгородской области</a></li>
-<li id="menu-item-876" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-876"><a href="{{url_for('APKBG')}}">АПК "Безопасный город"</a></li>
-</ul></div><li id="menu-item-876" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-876"><a href="/digital_zabota">Цифровая забота</a></li>
-<li id="menu-item-876" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-876"><a href="/digital_tech">Цифровые технологии</a></li>
-				</div>
-					</div>
+		<section class="sidebar">
+			<div class="page__menu">
+			<div class="page-menu">
+			  <div class="page-menu__links">
+				<a href="{{url_for('KJNO')}}">Карта жителя Новгородской области</a>
+				<a href="{{url_for('APKBG')}}">АПК "Безопасный город"</a>
+				<a href="/digital_zabota">Цифровая забота</a>
+				<a href="/digital_tech">Цифровые технологии</a>
+			  </div>
+			</div>
+			</div>
+			</section> 
+		</div>
 
 				<div class="col-lg-9">
 					<div class="contentPage">
