--- a/templates/posts_detail.html
+++ b/templates/posts_detail.html
@@ -6,7 +6,7 @@
 
 <div class="page">{% block content %}
     <h1>{{posts.title}}</h1>
-    <img src= /{{posts.id}} style="height: 60vh; margin-bottom: 10px">
+    <img src= /{{posts.id}} style="margin: -20px auto 20px; display: block; height: 50vh; margin-bottom: 10px; border-radius: 10px; box-shadow: 0 5px 10px 0 rgba(0,0,0,.1),0 3px 15px 0 rgba(0,0,0,.19)!important; border: 1px solid transparent; margin-bottom: 10px;"> 
     <div class = "textpostdetail">
         <p>{{posts.text}}</p>
         <b>Дата: {{posts.timepost}} </b>
