--- a/templates/ustav.html
+++ b/templates/ustav.html
@@ -9,15 +9,19 @@
 
 <div id="content" class="site-content site-content-inner" tag="inner">
 	<div id="content-inside" class="container">
-		<div class="row">
-			<div class="col-lg-3">
-				<div class="left-menu">
-					<h3 class="left-menu-caption">
-						<i class="icon"></i>
-						Документы	</h3>
-					<div class="menu-container">
-						<ul id="menu" class="menu">
-							<li id="menu-item-289" class="menu-item"><a href="{{ url_for('ustav')}}" aria-current="page">Устав</a></li>
+		<!-- <div class="row">
+			<div class="col-lg-3"> -->
+				<!-- <section class="sidebar">
+					<a href="#" onclick="$('.page__menu').toggle();" class="section-menu">Меню раздела</a>
+					<div class="page__menu">
+					<div class="page-menu">
+					  <div class="page-menu__links">
+					  <a href="/ustav">Устав</a>
+					  </div>
+					</div>
+					</div>
+					</section> -->
+					
 
 </ul></div>
 				</div>
