добавил знаки и исправил грамматику в о нас

--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
 <div class="page-content">
   <h1 class="page__title">Информация об организации</h1>
 <div class="info-title">
-    Государственное областное казенное учреждение «Центр информационных технологий»
+    Государственное областное казённое учреждение «Центр информационных технологий»
 </div>
 <div class="info-cardblock">
 <div class="info-card">
@@ -20,7 +20,7 @@
       <div class="info-card__fio2">
           Евгений Валерьевич			</div>
       <div class="info-card__dolzhnost">
-          Директор ГОКУ "Центр информационных технологии"			</div>
+          Директор ГОКУ "Центр информационных технологий"			</div>
   </div>
 </div>
 <div class="info-contacts">
@@ -29,7 +29,7 @@
   </div>
   <div class="info-contacts__phone">
     <img style="width: 18px; height: 18px" src="{{ url_for('static', filename= 'image/tel.png') }}">
-      8(8162) 700-515 (Доб. 3900)		</div>
+      8(8162) 70-05-15 (Доб. 3900)		</div>
   <div class="info-contacts__email">
     <a style="font-size: 16px" href="mailto:cit@novreg.ru">
         <img style="width: 18px; height: 18px" src="{{ url_for('static', filename= 'image/mail.png') }}">
