--- a/templates/APKBG.html
+++ b/templates/APKBG.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="headwords"><h1>Нормативно-правовые акты ГОКУ ЦИТ</h1></div>
+<div class="headwords"><h1>Проекты</h1></div>
 
 <div id="content" class="site-content site-content-inner" tag="inner">
 	<div id="content-inside" class="container">
@@ -27,8 +27,6 @@
 
 				<div class="col-lg-9">
 					<div class="contentPage">
-						<h2 class="contentPage-caption">
-							Проект "Безопасный город"						</h2>
 						<div class="breadcrumb"><a href="/">Главная</a> » Проект "Безопасный город"</div>						<main id="main" class="site-main" role="main">
 						</div>
 
