--- a/templates/KJNO.html
+++ b/templates/KJNO.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="headwords"><h1>Нормативно-правовые акты ГОКУ ЦИТ</h1></div>
+<div class="headwords"><h1>Проекты</h1></div>
 
 <div id="content" class="site-content site-content-inner" tag="inner">
 	<div id="content-inside" class="container">
@@ -27,8 +27,6 @@
 
 				<div class="col-lg-9">
 					<div class="contentPage">
-						<h2 class="contentPage-caption">
-							Проект "Карта жителя Новгородской области"				</h2>
 						<div class="breadcrumb"><a href="/">Главная</a> » Проект "Карта жителя Новгородской области"</div>						<main id="main" class="site-main" role="main">
 
 <article id="post-264" class="post-264 page type-page status-publish hentry category-max_mega_menu_5">
