--- a/templates/digital_zabota.html
+++ b/templates/digital_zabota.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="headwords"><h1>Нормативно-правовые акты ГОКУ ЦИТ</h1></div>
+<div class="headwords"><h1>Проекты</h1></div>
 
 <div id="content" class="site-content site-content-inner" tag="inner">
 	<div id="content-inside" class="container">
