--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
     <title>{% block title %}{% endblock %}</title>
-    <link rel="icon" type = "image/png" sizes ="32x32" href="/static/image/logo 32.png"><!-- 32×32 -->
+    <link rel="icon" type = "image/png" sizes ="32x32" href="/static/image/logo.png"><!-- 32×32 -->
 </head>
 <body style = "font-family: Golos; font-size: 18px;">
     <div class="container">
