--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
 <div class="dropdown" >
   <button class="dropbtn" style="font-size: 20px"> ≡ Полезные ссылки </button>
   <div class="dropdown-content">
-    <a href="https://edportal.novreg.ru/" target="_blank">Единый портал Правительства Новгородской области</a>
+    <a href="https://www.novreg.ru/" target="_blank">Единый портал Правительства Новгородской области</a>
     <a href="https://mindigital.novreg.ru/" target="_blank">Минцифра НО</a>
     <a href="https://niac.ru/" target="_blank">ГУ НИАЦ</a>
   </div>
