--- a/templates/test.html
+++ b/templates/test.html
@@ -4,7 +4,6 @@
 {% endblock %}
 {% block content %}
 <nav class="navbar">
-    <div class="container">
       <div class="navbar__wrap">
         <div class="hamb">
           <div class="hamb__field" id="hamb">
@@ -13,27 +12,21 @@
           </div>
         </div>
         <ul class="menu" id="menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Benefits</a></li>
-          <li><a href="#">Prices</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">About us</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a style="font-size: 18px" href="/ustav" >Документы</a></li>
+          <li><a style="font-size: 18px" href="/KJNO" >Проекты</a></li>
+          <li><a style="font-size: 18px" href="/contacts">Контакты</a></li>
+          <li><a style="font-size: 18px" href="/medianews">Новости</a></li>
+          <li><a style="font-size: 18px" href="/about">О нас</a></li>
         </ul>
       </div>
     </div>
   </nav>
   <div class="popup" id="popup"></div>
-  <!-- Продолжение вашего кода .. -->
-</body>
+
+
 <style>
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-  html {
-    box-sizing: border-box;
-    height: 100%;
-  }
-  
   *,
   *::after,
   *::before {
@@ -43,8 +36,9 @@
   
   .navbar {
     width: 80%;
-    height: 75px;
-    background: #f4f7fb
+    height: 60px;
+    background: #f4f7fb;
+    border-radius: 10px;
   }
   
   .navbar__wrap {
@@ -60,8 +54,6 @@
   .popup {
     display: none;
   }
-  
-  
   
   .menu > li > a {
     text-decoration: none;
@@ -80,11 +72,11 @@
     display: flex;
     align-items: center;
     padding: 0 20px;
-    color: rgba(7, 6, 6, 0.7);
+    color: #0252a8;
   }
   
   .navbar__wrap .menu > li > a:hover {
-    color: rgba(255, 255, 255, 1);
+    border-bottom: 2px solid #0050B2;
   }
   @media (max-width: 1000px) {
 .navbar__wrap .menu {
@@ -106,7 +98,7 @@
   width: 30px;
   height: 3px;
   margin: 6px auto;
-  background-color: #300606;
+  background-color: #0252a8;
   transition: 0.2s;
 }
 
@@ -115,10 +107,11 @@
   left: -100%;
   width: 100%;
   height: 100%;
-  background-color: #c9aeae;
+  background-color: #f4f7fb;
   z-index: 100;
   display: flex;
   transition: 0.3s;
+  border-radius: 10px;
 }
 
 .popup.open {
@@ -134,6 +127,7 @@
   justify-content: start;
   padding: 50px 0;
   overflow: auto;
+ 
 }
 
 .popup .menu > li {
@@ -147,11 +141,11 @@
   padding: 20px 0;
   font-size: 20px;
   font-weight: bold;
-  color: #3f3f3f;
+  color: #0252a8;
 }
 
 .popup .menu > li > a:hover {
-  background-color: rgba(122, 82, 179, 0.1);
+  background-color: rgba(205, 179, 241, 0.1);
 }
 
 .hamb__field.active .bar:nth-child(2) {
@@ -212,5 +206,30 @@ hamb.classList.remove("active");
 body.classList.remove("noscroll");
 }
   </script>
+
+tbody>
+<tr style="height: 32px;">
+<td style="height: 32px; width: 449.683px;">Методические материалы (Госслужба)</td>
+<td style="height: 32px; width: 117.317px;"><a class="btn btn-white btn-animate" href="https://gossluzhba.gov.ru/anticorruption">Перейти</a></td>
+</tr>
+<tr style="height: 32px;">
+<td style="height: 32px; width: 449.683px;">Методические рекомендации, обзоры, разъяснения и иные документы, подготовленные Минтрудом России</td>
+<td style="height: 32px; width: 117.317px;"><a class="btn btn-white btn-animate" href="https://rosmintrud.ru/ministry/programms/anticorruption/9">Скачать</a></td>
+</tr>
+<tr style="height: 32px;">
+<td style="height: 32px; width: 449.683px;">Методические рекомендации по вопросам представления сведений о доходах, расходах, об имуществе и обязательствах имущественного характера и заполнения соответствующей формы справки</td>
+<td style="height: 32px; width: 117.317px;"><a class="btn btn-white btn-animate" href="/wp-content/uploads/2022/06/2022.06.21_metodicheskie_rekomendatsii.docx">Скачать</a></td>
+</tr>
+<tr style="height: 32px;">
+<td style="height: 32px; width: 449.683px;">Разъяснения Минтруда РФ от 5 октября 2012 г. практики применения статьи 12 Федерального закона от 25 декабря 2008 г. № 273-ФЗ “О противодействии коррупции”, содержащей ограничения, налагаемые на гражданина, замещавшего должность государственной или муниципальной службы, при заключении им трудового или гражданско-правового договора, в том числе случаев, когда дача согласия комиссией по соблюдению требований к служебному поведению и урегулированию конфликта интересов бывшему государственному служащему на замещение им должности в коммерческой или некоммерческой организации не требуется”</td>
+<td style="height: 32px; width: 117.317px;"><a class="btn btn-white btn-animate" href="/wp-content/uploads/2019/03/met_mat_31.doc">Скачать</a></td>
+</tr>
+<tr style="height: 32px;">
+<td style="height: 32px; width: 449.683px;">Методические рекомендации по разработке и принятию организациями мер по предупреждению и противодействию коррупции</td>
+<td style="height: 32px; width: 117.317px;"><a class="btn btn-white btn-animate" href="/wp-content/uploads/2019/03/met_mat_metodicheskie-rekomendacii-po-razrabotke-i-prinyatiyu-organizaciyami-mer-po-preduprezhdeniyu-i-protivodeystviyu-korrupcii.doc">Скачать</a></td>
+</tr>
+</tbody>
+        </table>
+</div>
 
 {% endblock %}
