--- a/templates/about.html
+++ b/templates/about.html
@@ -29,7 +29,7 @@
   </div>
   <div class="info-contacts__phone">
     <img style="width: 18px; height: 18px" src="{{ url_for('static', filename= 'image/tel.png') }}">
-      8(8162) 70-05-15 (Доб. 3900)		</div>
+      8(8162) 501-515 (Доб. 3900)		</div>
   <div class="info-contacts__email">
     <a style="font-size: 16px" href="mailto:cit@novreg.ru">
         <img style="width: 18px; height: 18px" src="{{ url_for('static', filename= 'image/mail.png') }}">
