--- a/templates/base.html
+++ b/templates/base.html
@@ -305,7 +305,7 @@ body.classList.remove("noscroll");
 		<div class="footer__block" >
             <a style="font-size: 16px" href="tel:+78162700515" class="footer__contacts-item">
                   <img style="width: 24px; height: 24px" src="{{ url_for('static', filename= 'image/tel.png') }}">
-                    +7 (8162) 700-515
+                    +7 (8162) 501-515
                 </a> <br>
                 <a style="font-size: 16px" href="mailto:cit@novreg.ru" class="footer__contacts-item footer__contacts-item--mail">
                   <img style="width: 24px; height: 24px" src="{{ url_for('static', filename= 'image/mail.png') }}">
@@ -326,7 +326,7 @@ body.classList.remove("noscroll");
 			Новгородская область © 2024
 		</div>
 		<div class="footer__cookies">
-			 Продолжая использовать наш сайт, вы даете согласие на обработку файлов Cookies и других пользовательских данных, в соответствии с <a href="https://edportal.novreg.ru/politika_konfidentsialnosti" target="_blank"> Политикой конфиденциальности</a>
+			 Продолжая использовать наш сайт, вы даете согласие на обработку файлов Cookies и других пользовательских данных, в соответствии с <a href="https://mindigital.novreg.ru/policy/" target="_blank"> Политикой конфиденциальности</a>
        
 		</div><br>
   
