--- a/templates/contacs.html
+++ b/templates/contacs.html
@@ -26,7 +26,7 @@
 		<div class="contacts-page__phones-left">
                           <h6 class="contacts-page__subtitle">Государственное областное казенное учреждение "Центр информационных технологий"</h6>
 <p class="contacts-page__text">
-	 +7 (8162) 70-05-15
+	 +7 (8162) 501-515
 </p>
 <h6 class="contacts-page__subtitle">Режим работы:</h6>
 <p class="contacts-page__text">
@@ -39,7 +39,7 @@
 
 <h6 class="contacts-page__subtitle">Отдел проектов ГОКУ "ЦИТ":</h6>
 <p class="contacts-page__text">
-	 8 (8162) 70-05-15 (доб. 3905, 3906)
+	 8 (8162) 501-515 (доб. 3905, 3906)
 </p>
  <br>                    <hr>
 </div>
