--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
 <div class="page-content">
   <h1 class="page__title">Информация об организации</h1>
 <div class="info-title">
-    Государственное областное казённое учреждение «Центр информационных технологий»
+    Государственное областное казённое учреждение «Центр информационных технологий» создано 01 июня 2023г.
 </div>
 <div class="info-cardblock">
 <div class="info-card">
